added logout and scrolling functionality

--- a/src/components/css/Chat.css
+++ b/src/components/css/Chat.css
@@ -1,8 +1,8 @@
 .chat {
   flex: 0.7;
   flex-grow: 1;
-  overflow-y: scroll;
-  padding-bottom: 150px;
+  display: flex;
+  flex-direction: column;
 }
 
 .chat__header {
@@ -11,6 +11,11 @@
   justify-content: space-between;
   padding: 20px;
   border-bottom: 1px solid lightgray;
+}
+
+.chat__messages {
+  flex: 1;
+  overflow-y: scroll;
 }
 
 .chat__channelName {
