--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -11,22 +11,12 @@
   display: flex;
   align-items: center;
   margin-left: 20px;
-  flex: 0.3;
+  flex: 0.5;
 }
 
 .header__left > .MuiSvgIcon-root {
   margin-left: auto;
   margin-right: 30px;
-}
-
-.header__search {
-  flex: 0.4;
-  background-color: #421f44;
-  display: flex;
-  padding: 0 50px;
-  color: gray;
-  border: 1px gray solid;
-  border-radius: 6px;
 }
 
 .header__search > input {
@@ -37,9 +27,13 @@
 }
 
 .header__right {
-  flex: 0.3;
+  flex: 0.5;
   display: flex;
   justify-content: flex-end;
   margin-left: auto;
   margin-right: 20px;
+}
+
+.header__right > .MuiIconButton-root {
+  color: #fff !important;
 }
