--- a/src/components/css/Sidebar.css
+++ b/src/components/css/Sidebar.css
@@ -4,10 +4,16 @@
   border-top: 1px solid #49274b;
   max-width: 260px;
   flex: 0.3;
+  display: flex;
+  flex-direction: column;
+}
+
+.sidebar__options {
+  padding-bottom: 10px;
   overflow-y: scroll;
 }
 
-.sidebar > hr {
+.sidebar__options > hr {
   margin-top: 10px;
   margin-bottom: 10px;
   border: 1px solid #49274b;
