--- a/src/components/css/Login.css
+++ b/src/components/css/Login.css
@@ -1,15 +1,16 @@
 .login {
   height: 100vh;
-  background-color: #f8f8f8;
+  background-color: #1f1c3d;
   display: grid;
   place-items: center;
+  color: white;
 }
 
 .login__container {
   padding: 100px;
   text-align: center;
-  background-color: white;
   border-radius: 10px;
+  background-color: #372c5a;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
@@ -19,9 +20,16 @@
   margin-bottom: 40px;
 }
 
+.login__container > .MuiSvgIcon-root {
+  padding: 20px;
+  color: #fff;
+  font-size: 64px;
+  border-radius: 999px;
+}
+
 .login__container > button {
   margin-top: 50px;
   text-transform: inherit !important;
-  background-color: #0a8d48 !important;
+  background-color: #327d5a !important;
   color: white;
 }
