--- a/src/components/css/Sidebar.css
+++ b/src/components/css/Sidebar.css
@@ -1,11 +1,12 @@
 .sidebar {
   color: white;
   background-color: var(--slack-color);
-  border-top: 1px solid #49274b;
+  border-top: 1px solid #27284b;
   max-width: 260px;
   flex: 0.3;
   display: flex;
   flex-direction: column;
+  min-width: 150px;
 }
 
 .sidebar__options {
@@ -14,14 +15,12 @@
 }
 
 .sidebar__options > hr {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  border: 1px solid #49274b;
+  border: 1px solid #27284b;
 }
 
 .sidebar__header {
   display: flex;
-  border-bottom: 1px solid #49274b;
+  border-bottom: 1px solid #27284b;
   padding-bottom: 10px;
   padding: 13px;
 }
